# ObavestiMe

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  setub.bat  setup.bat  vcpkg.json
.github/workflows/: build_on_windows.yml
cppscraper/: CMakeLists.txt  Common.hpp  DataWriter.cpp  DataWriter.hpp  GumboParser.cpp  GumboParser.hpp  HtmlReader.cpp  HtmlReader.hpp  cppscraper.cpp  cppscraper.h  main.cpp
src/cppscraper/: CMakeLists.txt  CMakePresets.json  cppscraper.cpp
tests/test_data/html/elektrodistribucija.rs/planirana-iskljucenja-beograd/: Dan_0_Iskljucenja.htm  Dan_1_Iskljucenja.htm  Dan_2_Iskljucenja.htm  Dan_3_Iskljucenja.htm
tests/test_data/html/elektrodistribucija.rs/planirana-iskljucenja-srbija/: Kragujevac_Dan_0_Iskljucenja.htm  Kragujevac_Dan_1_Iskljucenja.htm  Kragujevac_Dan_2_Iskljucenja.htm  Kragujevac_Dan_3_Iskljucenja.htm  Kraljevo_Dan_0_Iskljucenja.htm  Kraljevo_Dan_1_Iskljucenja.htm  Kraljevo_Dan_2_Iskljucenja.htm  Kraljevo_Dan_3_Iskljucenja.htm  Nis_Dan_0_Iskljucenja.htm  Nis_Dan_1_Iskljucenja.htm  Nis_Dan_2_Iskljucenja.htm  Nis_Dan_3_Iskljucenja.htm  NoviSad_Dan_0_Iskljucenja.htm  NoviSad_Dan_1_Iskljucenja.htm  NoviSad_Dan_2_Iskljucenja.htm  NoviSad_Dan_3_Iskljucenja.htm
